@@ -5,7 +5,7 @@
     <artifactId>camunda-cockpit-plugin-statistics-root</artifactId>
     <version>1.0.0</version>
     <name>Camunda Web App Statistics Plugin</name>
-    <description>NovaTec`s fancy statitstics plugin</description>
+    <description>NovaTec`s fancy statistics plugin</description>
 
     <packaging>jar</packaging>
 
@@ -165,4 +165,56 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>develop</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.camunda.bpm.webapp</groupId>
+                    <artifactId>camunda-webapp-tomcat-standalone</artifactId>
+                    <version>${camunda.version}</version>
+                    <type>war</type>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.mortbay.jetty</groupId>
+                        <artifactId>jetty-maven-plugin</artifactId>
+                        <version>8.1.14.v20131031</version>
+                        <configuration>
+                            <webAppConfig>
+                                <contextPath>/camunda</contextPath>
+                                <resourceBases>
+                                    <resourceBase>${project.basedir}/src/main/resources</resourceBase>
+                                    <resourceBAse>${project.basedir}/src/develop/resources</resourceBAse>
+                                </resourceBases>
+                            </webAppConfig>
+                          <jvmArgs>-Xmx2048m -Xms1536m -XX:PermSize=256m -XX:MaxPermSize=384m</jvmArgs>
+                        </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <version>1.9</version>
+                    <executions>
+                        <execution>
+                            <id>add-source</id>
+                            <phase>generate-sources</phase>
+                            <goals>
+                                <goal>add-source</goal>
+                            </goals>
+                            <configuration>
+                                <sources>
+                                   <source>src/develop/java</source>
+                                </sources>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+          </plugins>
+        </build>
+      </profile>
+    </profiles>
 </project>
